###################################
# CMakeLists.txt for engine/tools #
###################################

ADD_SUBDIRECTORY(hbsp)
ADD_SUBDIRECTORY(hcsg)
ADD_SUBDIRECTORY(hdetail)
ADD_SUBDIRECTORY(hdivide)
ADD_SUBDIRECTORY(hflood)
ADD_SUBDIRECTORY(hlight)
ADD_SUBDIRECTORY(hobsp)
ADD_SUBDIRECTORY(hportal)
ADD_SUBDIRECTORY(hvis)
ADD_SUBDIRECTORY(mef2input)
